@@ -1,0 +1,4 @@
+function FindProxyForURL(url, host)
+{
+        return "PROXY adsl.inist.fr:8080";
+}
