@@ -34,5 +34,7 @@ inist-tools (0.9.11RC) RC; urgency=medium
     d'erreur sur commande incorrecte
   * [DEV] Màj des procédures docker-proxy-on et docker-proxy-off
   * [DEV] Màj des scripts on et off pour docker
+  * [DEV] Ajout des fichiers pour proxypac
+  * [DEV] Ajout des fichiers pour proxypac
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
